--- a/.github/workflows/build-basilisk-linux-i686.yml
+++ b/.github/workflows/build-basilisk-linux-i686.yml
@@ -15,12 +15,23 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - name: GTK3 i686
+          - name: GTK3 i686 GCC
             gtk: gtk3
             arch: i686
-          - name: GTK2 i686
+            compiler: gcc
+          - name: GTK2 i686 GCC
             gtk: gtk2
             arch: i686
+            compiler: gcc
+          - name: GTK3 i686 Clang+LTO
+            gtk: gtk3
+            arch: i686
+            compiler: clang_lto
+          - name: GTK2 i686 Clang+LTO
+            gtk: gtk2
+            arch: i686
+            compiler: clang_lto
+
     steps:
       - name: Free Disk Space
         run: |
@@ -33,7 +44,13 @@ jobs:
           submodules: recursive
 
       - name: Copy mozconfig
-        run: cp mozconfigs/linux/${{ matrix.config.arch }}/${{ matrix.config.gtk }}_unofficial_branding.mozconfig .mozconfig
+        run: cp mozconfigs/linux/${{ matrix.config.arch }}/${{ matrix.config.gtk }}_unofficial_branding_${{ matrix.config.compiler }}.mozconfig .mozconfig
+
+      - name: Apply static libcxx patch
+        if: matrix.config.compiler == 'clang_lto_libcxx'
+        run: |
+          cd platform
+          git apply ../patches/static-libcxx-fix.patch
 
       - name: Update mozconfig for release branch
         if: github.ref == 'refs/heads/release'
@@ -56,5 +73,5 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: basilisk-linux-${{ matrix.config.arch }}-${{ matrix.config.gtk }}
+          name: basilisk-linux-${{ matrix.config.arch }}-${{ matrix.config.gtk }}-${{ matrix.config.compiler }}
           path: obj-${{ matrix.config.arch }}-unknown-linux-gnu/dist/basilisk-*
