--- a/.forgejo/workflows/build-basilisk-linux-x86_64.yml
+++ b/.forgejo/workflows/build-basilisk-linux-x86_64.yml
@@ -34,11 +34,11 @@ jobs:
             compiler: clang_lto
 
     steps:
-      - Install Node:
-          run: |
-            dnf config-manager --set-enabled ol8_appstream
-            dnf module enable nodejs:20 -y
-            dnf module install nodejs -y
+      - name: Install Node
+        run: |
+          dnf config-manager --set-enabled ol8_appstream
+          dnf module enable nodejs:20 -y
+          dnf module install nodejs -y
 
       - uses: actions/checkout@v4
         with:
